--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -3,7 +3,7 @@
 		<a href="/#!/" class="">Sense Forage</a>
 	</div>
 	<div class="col-md-8 col-xs-12">
-		<ul class="" data-ng-if="menu.shouldRender(authentication.user);">
+		<ul class="nav navbar-nav navbar-right" data-ng-if="menu.shouldRender(authentication.user);">
 			<li data-ng-repeat="item in menu.items | orderBy: 'position'" data-ng-if="item.shouldRender(authentication.user);" ng-switch="item.menuItemType" ui-route="{{item.uiRoute}}" class="{{item.menuItemClass}}" ng-class="{active: ($uiRoute)}" dropdown="item.menuItemType === 'dropdown'">
 				<a ng-switch-when="dropdown" class="dropdown-toggle">
 					<span data-ng-bind="item.title"></span>
