changed google font reference to ssl

--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -32,8 +32,8 @@
 	<meta name="twitter:image" content="/img/brand/logo.png">
 
 	<!-- Custom Fonts -->
-	<link href='http://fonts.googleapis.com/css?family=Playfair+Display:700italic' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Gentium+Book+Basic:700,400' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Playfair+Display:700italic' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Gentium+Book+Basic:700,400' rel='stylesheet' type='text/css'>
 	<!-- Fav Icon -->
 	<link href="/modules/core/img/brand/favicon.ico" rel="shortcut icon" type="image/x-icon">
 
