--- a/public/modules/categories/views/list-categories.client.view.html
+++ b/public/modules/categories/views/list-categories.client.view.html
@@ -1,9 +1,9 @@
-<section data-ng-controller="CategoriesController" data-ng-init="find()">
+<section data-ng-controller="CategoriesController as categoriesCtrl" data-ng-init="find()">
     <div class="page-header">
         <h1>Categories</h1>
     </div>
     <div class="list-group">
-        <a data-ng-repeat="category in categories" data-ng-href="#!/categories/{{category._id}}" class="list-group-item">
+        <a data-ng-repeat="category in categoriesCtrl.categories" data-ng-href="#!/categories/{{category._id}}" class="list-group-item">
 			<small class="list-group-item-text">
 				Posted on
 				<span data-ng-bind="category.created | date:'medium'"></span>
