--- a/public/modules/categories/views/view-category.client.view.html
+++ b/public/modules/categories/views/view-category.client.view.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="CategoriesController" data-ng-init="findOne()">
+<section data-ng-controller="CategoriesController as categoriesCtrl" data-ng-init="categoriesCtrl.findOne()">
 	<div class="page-header">
 		<h1 data-ng-bind="category.name"></h1>
 	</div>
