added edit function for product

--- a/public/modules/partners/views/edit-partner.client.view.html
+++ b/public/modules/partners/views/edit-partner.client.view.html
@@ -35,7 +35,7 @@
                             </div>
                             <div class="row">
                               <input type="text" data-ng-model="spec.title" ng-blur="partnerEditCtrl.update(partner)" id="spec.title" class="form-control spec-title">
-                              <textarea  data-ng-model="spec.descript" ng-blur="partnerEditCtrl.update(partner)" id="spec.descript" class="form-control spec-descript">
+                              <textarea  data-ng-model="spec.descript" ng-blur="partnerEditCtrl.update(partner)" id="spec.descript" class="form-control spec-descript"></textarea>
                             </div>
                           </div>
                     </div>
