--- a/public/modules/partners/css/partners.css
+++ b/public/modules/partners/css/partners.css
@@ -38,6 +38,11 @@
   min-width: 100%;
   font-size: 2em;
   text-align: center;
+  background: no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 .partner-edit .header a{
   color: black;
