--- a/public/modules/products/views/edit-product.client.view.html
+++ b/public/modules/products/views/edit-product.client.view.html
@@ -1,15 +1,30 @@
-<section data-ng-controller="ProductsController" data-ng-init="findOne()">
+<section data-ng-controller="ProductsEditController as ProductEditCtrl" data-ng-init="ProductEditCtrl.findOne()">
     <div class="page-header">
         <h1>Edit Product</h1>
     </div>
     <div class="col-md-12">
-        <form class="form-horizontal" data-ng-submit="update()" novalidate>
+        <form class="form-horizontal product-edit" data-ng-submit="ProductEditCtrl.update()" novalidate>
             <fieldset>
                 <div class="form-group">
-                    <label class="control-label" for="name">Name</label>
+                  <div class="container">
                     <div class="controls">
-                        <input type="text" data-ng-model="product.name" id="name" class="form-control" placeholder="Name" required>
+                      <div class="header text-center" style="background-image:url('http://images.visitcanberra.com.au/images/canberra_hero_image.jpg');">
+                      </div>
+                      <div class="row">
+                        <input type="text" data-ng-model="product.name" id="name" class="form-control name" placeholder="Name" required>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-7 col-xs-12">
+                          <textarea data-ng-model="product.description" id="description" class="form-control description" placeholder="Description"></textarea>
+                        </div>
+                        <div class="col-md-offset-1 col-md-4 col-xs-12">
+                          <p>spec1</a>
+                          <p>spec2</a>
+                          <p>spec3</a>
+                        </div>
+                      </div>
                     </div>
+                  </div>
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Update" class="btn btn-default">
