--- a/public/modules/products/views/list-products.client.view.html
+++ b/public/modules/products/views/list-products.client.view.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="ProductsController" data-ng-init="find()">
+<section data-ng-controller="ProductsController as ProductCtrl" data-ng-init="ProductCtrl.find()">
     <div class="page-header">
         <h1>Products</h1>
     </div>
