--- a/public/modules/products/views/view-product.client.view.html
+++ b/public/modules/products/views/view-product.client.view.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="ProductsController" data-ng-init="findOne()">
+<section data-ng-controller="ProductsController as ProductCtrl" data-ng-init="ProductCtrl.findOne()">
 	<div class="page-header">
 		<h1 data-ng-bind="product.name"></h1>
 	</div>
