--- a/public/modules/admin/views/user-list.client.view.html
+++ b/public/modules/admin/views/user-list.client.view.html
@@ -1,4 +1,4 @@
-<section class="row" data-ng-controller="UserController as UserCtrl">
+<section data-ng-controller="UserController as UserCtrl">
   <div class="page-header">
       <h1>Users List</h1>
   </div>
