--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -34,8 +34,9 @@
 	<!-- Custom Fonts -->
 	<link href='//fonts.googleapis.com/css?family=Playfair+Display:700italic' rel='stylesheet' type='text/css'>
 	<link href='//fonts.googleapis.com/css?family=Gentium+Book+Basic:700,400' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400' rel='stylesheet' type='text/css'>
 	<!-- Fav Icon -->
-	<link href="/modules/core/img/brand/favicon.ico" rel="shortcut icon" type="image/x-icon">
+	<link href="//crosscent.s3.amazonaws.com/logo.ico" rel="shortcut icon" type="image/x-icon">
 
 	<!--Application CSS Files-->
 	{% for cssFile in cssFiles %}<link rel="stylesheet" href="{{cssFile}}">{% endfor %}
@@ -51,7 +52,7 @@
 	<section class="content">
 			{% block content %}{% endblock %}
 	</section>
-
+	<footer data-ng-include="'/modules/core/views/footer.client.view.html'"></footer>
 	<!--Embedding The User Object-->
 	<script type="text/javascript">
 		var user = {{ user | json | safe }};
