--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -35,6 +35,8 @@
 	<link href='//fonts.googleapis.com/css?family=Playfair+Display:700italic' rel='stylesheet' type='text/css'>
 	<link href='//fonts.googleapis.com/css?family=Gentium+Book+Basic:700,400' rel='stylesheet' type='text/css'>
 	<link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Ovo' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
 	<!-- Fav Icon -->
 	<link href="//crosscent.s3.amazonaws.com/logo.ico" rel="shortcut icon" type="image/x-icon">
 
