--- a/public/modules/categories/views/view-category.client.view.html
+++ b/public/modules/categories/views/view-category.client.view.html
@@ -1,6 +1,9 @@
 <section data-ng-controller="CategoriesController as categoriesCtrl" data-ng-init="categoriesCtrl.findOne()">
 	<div class="page-header">
 		<h1 data-ng-bind="category.name"></h1>
+		<div data-ng-repeat="product in categoriesCtrl.ProductsList"
+			<h1 data-ng-bind="product.name"></h1>
+		</div>
 	</div>
 	<div class="pull-right" data-ng-show="((authentication.user) && (authentication.user._id == category.user._id))">
 		<a class="btn btn-primary" href="/#!/categories/{{category._id}}/edit">
