--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -3,9 +3,12 @@ html{
 	background-color: #F5F5F5;
 }
 body{
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Muli', sans-serif;
 	font-size: 100%;
 	background-color: #F5F5F5 !important;
+}
+h1 {
+	font-family: 'Ovo', serif;
 }
 
 .undecorated-link:hover {
@@ -30,7 +33,9 @@ body{
 	transform: translateY(-50%);
 }
 
-
+.navbar {
+	font-family: 'Source Sans Pro', sans-serif;
+}
 .brand-name {
 	text-align: center;
 	padding-top: 0.9em;
