--- a/public/modules/partners/views/list-partners.client.view.html
+++ b/public/modules/partners/views/list-partners.client.view.html
@@ -3,7 +3,7 @@
         <h1>Partners</h1>
     </div>
     <div class="list-group">
-        <a data-ng-repeat="partner in partnersCtrl.partners" href="/#!/partners/{{partner._id}}/edit" class="list-group-item">
+        <a data-ng-repeat="partner in partnersCtrl.partners" href="/#!/partners/{{partner._id}}" class="list-group-item">
 			<small class="list-group-item-text">
 				Posted on
 				<span data-ng-bind="partner.created | date:'medium'"></span>
