--- a/public/modules/products/views/view-product.client.view.html
+++ b/public/modules/products/views/view-product.client.view.html
@@ -1,21 +1,72 @@
 <section data-ng-controller="ProductsController as ProductCtrl" data-ng-init="ProductCtrl.findOne()">
-	<div class="page-header">
-		<h1 data-ng-bind="product.name"></h1>
+	<div class="product-view">
+		<div class="container-fluid">
+			<div class="horizontalScroll">
+				<img class="header" alt="" src="http://www.gettyimages.co.uk/gi-resources/images/Homepage/Category-Creative/UK/UK_Creative_462809583.jpg"><img class="header" alt="" src="http://blog.jimdo.com/wp-content/uploads/2014/01/tree-247122.jpg"><img class="header" alt="" src="http://blogs.biomedcentral.com/on-biology/wp-content/uploads/sites/5/2014/02/Benjamin-Blonder.png"><img class="header" alt="" src="http://www.gettyimages.in/CMS/StaticContent/1391099215267_hero2.jpg">
+			</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-8 col-xs-12 left">
+					<p class="category"data-ng-bind="product.category.name"></p><span data-ng-bind="product.user.displayName"></span>
+					<h1 class="title" data-ng-bind="product.name"></h1>
+					<p class="description" data-ng-bind="product.description"></p>
+				</div>
+				<div class="col-sm-4 col-xs-12 right">
+					<div class="row spec border">
+						<div class="col-xs-12">
+							<h2>Details</h2>
+							<p>Material: Canvas with Italian leather detailing</p>
+							<p>Colour: Olive brown</p>
+							<p>Made in: Italy</p>
+						</div>
+					</div>
+					<div class="row price border">
+						<div class="col-xs-12">
+							<h2>Price</h2>
+							<p>$185</p>
+						</div>
+					</div>
+					<div class="row social-media">
+						<div class="col-xs-12">
+							<p class="bold">Share</p>
+							<div class="row">
+								<div class="col-xs-2"><img class="responsive sm-icon" src="//crosscent.s3.amazonaws.com/twitter-icon.png"></div>
+								<div class="col-xs-10"><a class="sm-link" href="#">Twitter</a></div>
+							</div>
+							<div class="row">
+								<div class="col-xs-2"><img class="responsive sm-icon" src="//crosscent.s3.amazonaws.com/twitter-icon.png"></div>
+								<div class="col-xs-10"><a class="sm-link" href="#">Twitter</a></div>
+							</div>
+							<div class="row">
+								<div class="col-xs-2"><img class="responsive sm-icon" src="//crosscent.s3.amazonaws.com/twitter-icon.png"></div>
+								<div class="col-xs-10"><a class="sm-link" href="#">Twitter</a></div>
+							</div>
+							<div class="row">
+								<div class="col-xs-2"><img class="responsive sm-icon" src="//crosscent.s3.amazonaws.com/twitter-icon.png"></div>
+								<div class="col-xs-10"><a class="sm-link" href="#">Twitter</a></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="pull-right" data-ng-show="((authentication.user) && (authentication.user._id == product.user._id))">
+				<a class="btn btn-primary" href="/#!/products/{{product._id}}/edit">
+					<i class="glyphicon glyphicon-edit"></i>
+				</a>
+				<a class="btn btn-primary" data-ng-click="remove();">
+					<i class="glyphicon glyphicon-trash"></i>
+				</a>
+			</div>
+		</div>
+		<small>
+			<em class="text-muted">
+				Posted on
+				<span data-ng-bind="product.created | date:'mediumDate'"></span>
+				by
+				<span data-ng-bind="product.user.displayName"></span>
+			</em>
+		</small>
 	</div>
-	<div class="pull-right" data-ng-show="((authentication.user) && (authentication.user._id == product.user._id))">
-		<a class="btn btn-primary" href="/#!/products/{{product._id}}/edit">
-			<i class="glyphicon glyphicon-edit"></i>
-		</a>
-		<a class="btn btn-primary" data-ng-click="remove();">
-			<i class="glyphicon glyphicon-trash"></i>
-		</a>
-	</div>
-	<small>
-		<em class="text-muted">
-			Posted on
-			<span data-ng-bind="product.created | date:'mediumDate'"></span>
-			by
-			<span data-ng-bind="product.user.displayName"></span>
-		</em>
-	</small>
 </section>
