--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -1,11 +1,11 @@
 html{
 	font-size: 100%;
-	background-color: #F5F5F5;
+	background-color: #fafafb;
 }
 body{
 	font-family: 'Muli', sans-serif;
 	font-size: 100%;
-	background-color: #F5F5F5 !important;
+	background-color: #fafafb !important;
 }
 h1 {
 	font-family: 'Ovo', serif;
@@ -35,6 +35,7 @@ h1 {
 
 .navbar {
 	font-family: 'Source Sans Pro', sans-serif;
+	background-color: #ffffff;
 }
 .brand-name {
 	text-align: center;
@@ -202,22 +203,40 @@ h1 {
 	}
 }
 
-.subscription {
-	background-color: #fff;
+.footer {
+	background: #f3fdff url('//crosscent.s3.amazonaws.com/footer.png');
+	height: 300px;
+	background-size: auto 300px;
+	background-repeat: no-repeat;
+	background-position: bottom left;
 	margin-bottom: 0;
 }
-
-.subscription .lead {
-	font-size: 2em;
+.footer p {
+	margin: 0;
+	font-size:0.8em;
 }
-
-.mc-field-group > .email {
-	border: none;
-	background: white;
-	height: 40px;
-	width: 300px;
-	padding-left: 20px;
-	font-size: 1.5em;
-	margin: auto;
-	margin-bottom: 10px;
+.footer .left .row {
+	margin-bottom: 1em;
+}
+.footer .left {
+	text-align: left;
+}
+.footer .right {
+	text-align: right;
+}
+.footer .right a {
+	color: #000;
+}
+.footer .right a:hover {
+	text-decoration: none;
+	color: #FF5252;
+}
+@media screen and (min-width:0px) and (max-width:740px) {
+	.footer {
+		background-position: top right;
+		height: 150px;
+	}
+	.footer .left {
+		text-align: center;
+	}
 }
