--- a/public/modules/core/views/footer.client.view.html
+++ b/public/modules/core/views/footer.client.view.html
@@ -1,29 +1,24 @@
-<div class="jumbotron text-center subscription">
+<div class="jumbotron text-center footer">
   <div class="container">
     <div class="row">
-      <p class="lead">
-        Subscribe to Our Newsletter
-      </p>
-    </div>
-    <div class="row">
-      <p>Sign-up now to receive members only exclusive deals and news</p>
-
-      <div id="mc_embed_signup">
-        <form action="//senseforage.us10.list-manage.com/subscribe/post?u=c7519c46de08b8c593259fd6d&amp;id=20980daaa8" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
-          <div id="mc_embed_signup_scroll">
-            <div class="mc-field-group form-group">
-              <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="email">
-            </div>
-            <div id="mce-responses">
-              <div class="response" id="mce-error-response" style="display:none"></div>
-              <div class="response" id="mce-success-response" style="display:none"></div>
-            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;">
-              <input type="text" name="b_c7519c46de08b8c593259fd6d_20980daaa8" tabindex="-1" value="">
-            </div>
-            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default">
-          </div>
-        </form>
+      <div class="col-xs-12 col-sm-offset-6 col-sm-3 left">
+        <div class="row">
+          <p>SenseForage</p>
+          <p>#31-4711 Blair Drive</p>
+          <p>Richmond, BC, Canada</p>
+        </div>
+        <div class="row">
+          <p>info@senseforage.com</p>
+        </div>
+        <div class="row">
+          <p>made by Roy Chiang</p>
+        </div>
+      </div>
+      <div class="hidden-xs col-sm-3 right">
+        <p><a href="#">Articles</a></p>
+        <p><a href="#">Categories</a></p>
+        <p><a href="#">Partners</a></p>
+        <p><a href="#">Products</a></p>
       </div>
     </div>
   </div>
