--- a/public/modules/products/views/edit-product.client.view.html
+++ b/public/modules/products/views/edit-product.client.view.html
@@ -2,41 +2,55 @@
     <div class="page-header">
         <h1>Edit Product</h1>
     </div>
-    <div class="col-md-12">
-        <form class="form-horizontal product-edit" data-ng-submit="ProductEditCtrl.update()" novalidate>
-            <fieldset>
-                <div class="form-group">
-                  <div class="container">
-                    <div class="controls">
-                      <div class="header text-center" style="background-image:url('http://images.visitcanberra.com.au/images/canberra_hero_image.jpg');">
-                      </div>
-                      <div class="row">
-                        <input type="text" data-ng-model="product.name" id="name" class="form-control name" placeholder="Name" required>
-                      </div>
-                      <div class="row">
-                        <div class="col-md-7 col-xs-12">
+    <div class="row">
+      <div class="col-md-12">
+          <form class="form-horizontal product-edit" data-ng-submit="ProductEditCtrl.update()" novalidate>
+              <fieldset>
+                  <div class="form-group">
+                    <div class="container">
+                      <div class="controls">
+                        <div class="row">
+                          <label>product name</label>
+                          <input type="text" data-ng-model="product.name" id="name" class="form-control name" placeholder="Name" required>
+                        </div>
+                        <div class="row">
+                          <label>product description</label>
                           <textarea data-ng-model="product.description" id="description" class="form-control description" placeholder="Description"></textarea>
                         </div>
-                        <div class="col-md-offset-1 col-md-4 col-xs-12">
-                          <p>spec1</a>
-                          <p>spec2</a>
-                          <p>spec3</a>
+                        <div class="row">
+                          <label>product category</label>
+                          <select data-ng-model="product.category" data-ng-options="category._id as category.name for category in ProductEditCtrl.categories" id="category" class="form-control"></select>
+                        </div>
+                        <div class="row">
+                          <label>product specifications</label>
+                          <p><a ng-click="ProductEditCtrl.addSpec()">add</a></p>
+                          <div data-ng-repeat="spec in product.specification" class="col-sm-4">
+                            <input type="text" data-ng-model="spec.title" id="title" class="form-control name" placeholder="Title">
+                            <input type="text" data-ng-model="spec.descript" id="descript" class="form-control name" placeholder="Descript">
+                            <p><a ng-click="ProductEditCtrl.deleteSpec($index)">delete</a></p>
+                          </div>
+                          <a ng-click="ProductEditCtrl.specUpdate('sm', product)">edit</a>
+                        </div>
+                        <div class="row">
+                          <label>product images</label>
+                          <p><a ng-click="ProductEditCtrl.addImage()">add</a></p>
+                          <div data-ng-repeat="image in product.images" class="col-sm-4">
+                            <input type="text" data-ng-model="image.link" id="link" class="form-control name" placeholder="Link">
+                            <input type="text" data-ng-model="image.descript" id="descript" class="form-control name" placeholder="Descript">
+                            <p><a ng-click="ProductEditCtrl.deleteImage($index)">delete</a></p>
+                          </div>
+                          <a ng-click="ProductEditCtrl.specUpdate('sm', product)">edit</a>
+                        </div>
+                        <div class="form-group">
+                          <input type="submit" value="Update" class="btn btn-default">
+                        </div>
+                        <div data-ng-show="error" class="text-danger">
+                          <strong data-ng-bind="error"></strong>
                         </div>
                       </div>
-                      <div>
-                        <p>Categories</p>
-                        <select data-ng-model="product.category" data-ng-options="category._id as category.name for category in ProductEditCtrl.categories" id="category" class="form-control"></select>
-                      </div>
                     </div>
-                  </div>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Update" class="btn btn-default">
-                </div>
-				<div data-ng-show="error" class="text-danger">
-					<strong data-ng-bind="error"></strong>
-				</div>
-            </fieldset>
-        </form>
+              </fieldset>
+          </form>
+      </div>
     </div>
 </section>
