--- a/public/modules/partners/views/logo-update.client.view.html
+++ b/public/modules/partners/views/logo-update.client.view.html
@@ -3,7 +3,7 @@
         <h1>Edit Logo Url</h1>
     </div>
     <div class="col-md-12">
-        <form class="form-horizontal partner-edit" data-ng-submit="update()" novalidate>
+        <form class="form-horizontal partner-edit" data-ng-submit="partnerEditCtrl.update()" novalidate>
             <fieldset>
                 <div class="form-group">
                     <div class="controls">
