--- a/public/modules/partners/views/view-partner.client.view.html
+++ b/public/modules/partners/views/view-partner.client.view.html
@@ -26,10 +26,25 @@
 					<p data-ng-bind="partner.longDescription"></p>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row name spec">
+				<h1 class="title">Specializations</h1>
+				<div class="col-xs-12 col-sm-4" data-ng-repeat="spec in partner.specialization">
+					<p class="spec-title" data-ng-bind="spec.title"></p>
+					<p class="spec-descript" data-ng-bind="spec.descript"></p> 
+				</div>
+			</div>
+			<div class="row name">
 				<h1 class="title">Products Made and Designed by This Partner</h1>
-				<div data-ng-repeat="product in PartnerCtrl.productsList" class="col-sm-4">
-					<p data-ng-bind="product.name"></p>
+				<div class="col-xs-12 col-sm-6 item-list" data-ng-repeat="product in PartnerCtrl.productsList">
+					<div class="wrapper">
+						<a data-ng-href="#!/products/{{product._id}}">
+							<div class="image" ng-style="{'background-image':'url({{product.images.1.link}})'}" >
+								<div class="hover">
+									<p class="title vertical-center" data-ng-bind="product.name"></p>
+								</div>
+							</div>
+						</a>
+					</div>
 				</div>
 			</div>
 			<div class="pull-right" data-ng-show="((authentication.user) && (authentication.user._id == partner.user._id))">
