--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -1,6 +1,7 @@
 <div class="container" data-ng-controller="HeaderController">
 	<div class="col-md-4 col-xs-12 brand-name">
 		<a href="/#!/" class="">Sense Forage</a>
+		<p data-ng-bind="url"></p>
 	</div>
 	<div class="col-md-8 col-xs-12">
 		<ul class="nav navbar-nav navbar-right" data-ng-if="menu.shouldRender(authentication.user);">
