--- a/public/modules/partners/views/list-partners.client.view.html
+++ b/public/modules/partners/views/list-partners.client.view.html
@@ -3,11 +3,12 @@
     <div class="container-fluid">
       <h1>Partners</h1>
       <div class="row" ng-class-odd="'list-left'" ng-class-even="'list-right'"data-ng-repeat="partner in partnersCtrl.partners">
-        <a href="/#!/partners/{{partner._id}}"><h1 data-ng-bind="partner.name"></h1></a>
-        <div class="text">
+        <h1><a class="title" href="/#!/partners/{{partner._id}}" data-ng-bind="partner.name"></a></h1>
+        <div class="text col-xs-12 col-sm-8">
           <p data-ng-bind="partner.longDescription"></p>
         </div>
-        <div class="image">
+        <div class="image col-xs-12 col-sm-4">
+          <img class="responsive" data-ng-src="{{partner.logo}}">
         </div>
       </div>
 
