--- a/public/modules/products/views/view-product.client.view.html
+++ b/public/modules/products/views/view-product.client.view.html
@@ -35,22 +35,22 @@
 					<div class="row social-media">
 						<div class="col-xs-12">
 							<p class="bold">Share</p>
-							<div class="row">
-								<div class="col-xs-2"><img class="responsive sm-icon" src="//crosscent.s3.amazonaws.com/twitter-icon.png"></div>
-								<div class="col-xs-10"><a class="twitter-share-button" data-ng-href="https://twitter.com/intent/tweet?text=+{{url}}">Tweet</a></div>
-							</div>
-							<div class="row">
-								<div class="col-xs-2"><img class="responsive sm-icon" src="//crosscent.s3.amazonaws.com/twitter-icon.png"></div>
-								<div class="col-xs-10"><a class="sm-link" href="#">Twitter</a></div>
-							</div>
-							<div class="row">
-								<div class="col-xs-2"><img class="responsive sm-icon" src="//crosscent.s3.amazonaws.com/twitter-icon.png"></div>
-								<div class="col-xs-10"><a class="sm-link" href="#">Twitter</a></div>
-							</div>
-							<div class="row">
-								<div class="col-xs-2"><img class="responsive sm-icon" src="//crosscent.s3.amazonaws.com/twitter-icon.png"></div>
-								<div class="col-xs-10"><a class="sm-link" href="#">Twitter</a></div>
-							</div>
+							<ul ng-social-buttons
+							     data-url="url"
+							     data-title="'test'"
+							     data-description="'test2'"
+							     data-image="'http://s3.mistinfo.com/32/d8/32d8eab76f4c242f665bda66b5edc6c5.jpg'">
+							    <li>Share:</li>
+							    <li class="ng-social-facebook">Facebook</li>
+							    <li class="ng-social-google-plus">Google+</li>
+							    <li class="ng-social-twitter">Twitter</li>
+							    <li class="ng-social-vk">Вконтакте</li>
+							    <li class="ng-social-odnoklassniki">Одноклассники</li>
+							    <li class="ng-social-mailru">Мой мир</li>
+							    <li class="ng-social-pinterest">Pinterest</li>
+							    <li class="ng-social-github" user="esvit" repository="ng-table">GitHub</li>
+							    <li class="ng-social-github-forks" user="esvit" repository="ng-table">Forks</li>
+							</ul>
 						</div>
 					</div>
 				</div>
