rearranged ordering of menu items and removed catagories from menu

--- a/public/modules/core/views/footer.client.view.html
+++ b/public/modules/core/views/footer.client.view.html
@@ -15,10 +15,10 @@
         </div>
       </div>
       <div class="hidden-xs col-sm-3 right">
-        <p><a href="#">Articles</a></p>
-        <p><a href="#">Categories</a></p>
-        <p><a href="#">Partners</a></p>
-        <p><a href="#">Products</a></p>
+        <p><a href="#!/articles">Articles</a></p>
+        <p><a href="#!/categories">Categories</a></p>
+        <p><a href="#!/partners">Partners</a></p>
+        <p><a href="#!/products">Products</a></p>
       </div>
     </div>
   </div>
