--- a/public/modules/partners/css/partners.css
+++ b/public/modules/partners/css/partners.css
@@ -142,6 +142,23 @@
 }
 
 /* partner-list css*/
+.partner-list .header {
+  text-align: center;
+}
+.partner-list .list-left,
+.partner-list .list-right {
+  position: relative;
+}
+.partner-list .list-left:before,
+.partner-list .list-right:before {
+  content: "";
+  position: absolute;
+  width: 25%;
+  height: 1px;
+  top: 0;
+  left: 37.5%;
+  border-top: 1px solid gray;
+}
 .partner-list .list-left a,
 .partner-list .list-right a {
   color: #000;
