--- a/public/modules/articles/css/articles.css
+++ b/public/modules/articles/css/articles.css
@@ -6,6 +6,35 @@
   padding: 0;
 }
 
+.articles-view .wrapper {
+  display: inline-block;
+  position:relative;
+}
+.articles-view .wrapper p {
+  width: 100%;
+  white-space: normal;
+  color: white;
+  font-size: 0.8em;
+}
+.articles-view .wrapper .overlay{
+  position:absolute;
+  left:0;
+  bottom:0;
+  width: 100%;
+  display: inline-block;
+  background-color: #000;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 600;
+  padding: 0.5em;
+}
+.articles-view .wrapper .header {
+  height: 350px;
+  width: auto;
+  border-image-width: 0;
+}
+.articles-view .container-fluid {
+  padding: 0;
+}
 .articles-view .horizontalScroll {
 	width: 100%; /* arbitary for demo only */
   height: 350px;
@@ -63,4 +92,46 @@
   color: #999999;
   font-size: 0.8em;
   text-transform: uppercase;
+}
+
+
+/*article-list css*/
+.articles-list .header {
+  text-align: center;
+}
+.articles-list .article {
+  height: 33em;
+  margin-bottom: 2em;
+}
+.articles-list .article .wrapper {
+  margin: 5px;
+  border: 1px solid gray;
+  height: 100%
+}
+.articles-list .article .image {
+  height: 12em;
+  background: no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+.articles-list .article .inner {
+  padding: 1em;
+  position: relative;
+  height: 20em;
+}
+.articles-list .article .inner h1 {
+  line-height: 0.6em;
+}
+.articles-list .article .inner .title {
+  color: black;
+  font-weight: 700;
+  font-size: 0.6em;
+}
+.articles-list .article .inner .readmore {
+  position: absolute;
+  bottom: 0;
+  color: black;
+  font-size: 1em;
 }
