--- a/public/modules/articles/views/list-articles.client.view.html
+++ b/public/modules/articles/views/list-articles.client.view.html
@@ -1,19 +1,26 @@
 <section data-ng-controller="ArticlesController as articleCtrl" data-ng-init="articleCtrl.find()">
-    <div class="page-header">
-        <h1>Articles</h1>
-    </div>
-    <div class="list-group">
-        <a data-ng-repeat="article in articles" data-ng-href="#!/articles/{{article._id}}" class="list-group-item">
-			<small class="list-group-item-text">
-				Posted on
-				<span data-ng-bind="article.created | date:'medium'"></span>
-				by
-				<span data-ng-bind="article.user.displayName"></span>
-			</small>
-			<h4 class="list-group-item-heading" data-ng-bind="article.name"></h4>
-        </a>
-    </div>
-    <div class="alert alert-warning text-center" data-ng-hide="!articles.$resolved || articles.length">
-    	No Articles yet, why don't you <a href="/#!/articles/create">create one</a>?
+    <div class="container articles-list">
+      <h1 class="header">Articles</h1>
+      <div>
+        <div class="row">
+          <div class="col-sm-4 article" data-ng-repeat="article in articles">
+            <div class="wrapper">
+              <a data-ng-href ="#!/articles/{{article._id}}">
+                <div class="image" ng-style="{'background-image':'url({{article.images.1.link}})'}"></div>
+              </a>
+              <div class="inner">
+                <h1>
+                  <a class="title" data-ng-bind="article.name" data-ng-href ="#!/articles/{{article._id}}"></a>
+                </h1>
+                <p data-ng-bind="article.excerpt"></p>
+                <p><a class="readmore" data-ng-href ="#!/articles/{{article._id}}">Read More</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="alert alert-warning text-center" data-ng-hide="!articles.$resolved || articles.length">
+      	No Articles yet, why don't you <a href="/#!/articles/create">create one</a>?
+      </div>
     </div>
 </section>
