beautified signin.client.view.html

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -10,6 +10,13 @@ body{
 h1 {
 	font-family: 'Ovo', serif;
 }
+.btn-general {
+	margin: 1em 0 1em 0;
+	border: 1px solid black;
+	border-radius: 0;
+	background: black;
+	color: white;
+}
 
 .undecorated-link:hover {
 	text-decoration: none;
