--- a/public/modules/users/views/authentication/signin.client.view.html
+++ b/public/modules/users/views/authentication/signin.client.view.html
@@ -1,27 +1,47 @@
-<section class="row" data-ng-controller="AuthenticationController">
-	<h3 class="col-md-12 text-center">Login</h3>
-	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
-		<form data-ng-submit="signin()" class="signin form-horizontal" autocomplete="off">
-			<fieldset>
-				<div class="form-group">
-					<label for="username">Username</label>
-					<input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Username">
+<section data-ng-controller="AuthenticationController">
+	<div class="user">
+		<div class="container">
+			<h3 class="header">Sign in or Create an Account</h3>
+			<div class="row">
+				<div class="col-sm-4 col-sm-offset-2 border">
+					<div class="wrapper">
+						<div class="inner">
+							<h1 class="title">Existing Clients</h1>
+							<p>If you already have an account with us, please use your username to login.</p>
+							<form data-ng-submit="signin()" class="signin form-horizontal" autocomplete="off">
+								<fieldset>
+									<div class="form-group">
+										<label for="username">Username</label>
+										<input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Username">
+									</div>
+									<div class="form-group">
+										<label for="password">Password</label>
+										<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
+									</div>
+									<div class="form-group">
+										<button type="submit" class="btn btn-general">Sign in</button>
+									</div>
+									<div class="forgot-password">
+										<a href="/#!/password/forgot">Forgot your password?</a>
+									</div>
+									<div data-ng-show="error" class="text-center text-danger">
+										<strong data-ng-bind="error"></strong>
+									</div>
+								</fieldset>
+							</form>
+						</div>
+					</div>
 				</div>
-				<div class="form-group">
-					<label for="password">Password</label>
-					<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
+				<div class="col-sm-4 border">
+					<div class="wrapper">
+						<div class="inner">
+							<h1 class="title">New Client</h1>
+							<p>Register now for faster shopping and ordering. You will also receive exclusive coupons and the latest news from us.</p>
+							<a href="#!/signup" class="btn btn-general" role="button">Register</a>
+						</div>
+					</div>
 				</div>
-				<div class="text-center form-group">
-					<button type="submit" class="btn btn-primary">Sign in</button>&nbsp; or&nbsp;
-					<a href="/#!/signup">Sign up</a>
-				</div>
-				<div class="forgot-password">
-					<a href="/#!/password/forgot">Forgot your password?</a>
-				</div>
-				<div data-ng-show="error" class="text-center text-danger">
-					<strong data-ng-bind="error"></strong>
-				</div>
-			</fieldset>
-		</form>
+			</div>
+		</div>
 	</div>
 </section>
